related items added

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -127,84 +127,38 @@
 <!-- product section end -->
 
 
-<!-- RELATED PRODUCTS section -->
+<!-- Related product section -->
 <section class="related-product-section">
   <div class="container">
-    <div class="section-title">
+
+    <div class="section-title text-uppercase">
       <h2>RELATED PRODUCTS</h2>
     </div>
-    <div class="product-slider owl-carousel">
-      <div class="product-item">
-        <div class="pi-pic">
-          <img src="./assets/img/single-product/thumb-1.jpg" alt="">
-          <div class="pi-links">
-            <a href="#" class="add-card"><i class="flaticon-bag"></i><span>ADD TO CART</span></a>
-            <a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
+
+    <div *ngIf="recommendedItems" class="row">
+
+      <div *ngFor="let item of recommendedItems; let i = index" class="col-lg-3 col-sm-6">
+        <div class="product-item">
+          <div class="pi-pic" (click)="navigateToProductDetails(item)">
+            <div id="itemTypeLabel{{i}}">{{setSaleAndNewLabels(item, i)}}</div>
+            <img src="{{item.img}}" alt="">
+            <div class="pi-links">
+              <a class="add-card"><i class="flaticon-bag" (click)="addToCart(item, i); $event.stopPropagation()"></i><span>ADD TO CART</span></a>
+              <a class="wishlist-btn"><i id="wishlist-icon-{{i}}" class="flaticon-heart" (click)="addToWishlist(item, i); $event.stopPropagation()">{{setWishlistIcons(item, i)}}</i></a>
+            </div>
+          </div>
+          <div class="pi-text">
+            <h6>€{{item.pr}}</h6>
+            <p>{{item.n}}</p>
           </div>
         </div>
-        <div class="pi-text">
-          <h6>$35,00</h6>
-          <p>Flamboyant Pink Top </p>
-        </div>
       </div>
-      <div class="product-item">
-        <div class="pi-pic">
-          <div class="tag-new">New</div>
-          <img src="./assets/img/product/2.jpg" alt="">
-          <div class="pi-links">
-            <a href="#" class="add-card"><i class="flaticon-bag"></i><span>ADD TO CART</span></a>
-            <a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
-          </div>
-        </div>
-        <div class="pi-text">
-          <h6>$35,00</h6>
-          <p>Black and White Stripes Dress</p>
-        </div>
-      </div>
-      <div class="product-item">
-        <div class="pi-pic">
-          <img src="./assets/img/product/3.jpg" alt="">
-          <div class="pi-links">
-            <a href="#" class="add-card"><i class="flaticon-bag"></i><span>ADD TO CART</span></a>
-            <a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
-          </div>
-        </div>
-        <div class="pi-text">
-          <h6>$35,00</h6>
-          <p>Flamboyant Pink Top </p>
-        </div>
-      </div>
-      <div class="product-item">
-        <div class="pi-pic">
-          <img src="./assets/img/product/4.jpg" alt="">
-          <div class="pi-links">
-            <a href="#" class="add-card"><i class="flaticon-bag"></i><span>ADD TO CART</span></a>
-            <a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
-          </div>
-        </div>
-        <div class="pi-text">
-          <h6>$35,00</h6>
-          <p>Flamboyant Pink Top </p>
-        </div>
-      </div>
-      <div class="product-item">
-        <div class="pi-pic">
-          <img src="../assets/img/product/6.jpg" alt="">
-          <div class="pi-links">
-            <a href="#" class="add-card"><i class="flaticon-bag"></i><span>ADD TO CART</span></a>
-            <a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
-          </div>
-        </div>
-        <div class="pi-text">
-          <h6>$35,00</h6>
-          <p>Flamboyant Pink Top </p>
-        </div>
-      </div>
+
     </div>
+
   </div>
 </section>
-<!-- RELATED PRODUCTS section end -->
-
+<!-- Related product section end -->
 <app-footer-section></app-footer-section>
 
 
