--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -88,72 +88,32 @@
 <!-- Related product section -->
 <section class="related-product-section">
   <div class="container">
+
     <div class="section-title text-uppercase">
       <h2>Continue Shopping</h2>
     </div>
-    <div class="row">
-      <div class="col-lg-3 col-sm-6">
+
+    <div *ngIf="recommendedItems" class="row">
+
+      <div *ngFor="let item of recommendedItems; let i = index" class="col-lg-3 col-sm-6">
         <div class="product-item">
-          <div class="pi-pic">
-            <div class="tag-new">New</div>
-            <img src="./assets/img/product/2.jpg" alt="">
+          <div class="pi-pic" (click)="navigateToProductDetails(item)">
+            <div id="itemTypeLabel{{i}}">{{setSaleAndNewLabels(item, i)}}</div>
+            <img src="{{item.img}}" alt="">
             <div class="pi-links">
-              <a href="#" class="add-card"><i class="flaticon-bag"></i><span>ADD TO CART</span></a>
-              <a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
+              <a class="add-card"><i class="flaticon-bag" (click)="addToCart(item, i); $event.stopPropagation()"></i><span>ADD TO CART</span></a>
+              <a class="wishlist-btn"><i id="wishlist-icon-{{i}}" class="flaticon-heart" (click)="addToWishlist(item, i); $event.stopPropagation()">{{setWishlistIcons(item, i)}}</i></a>
             </div>
           </div>
           <div class="pi-text">
-            <h6>$35,00</h6>
-            <p>Black and White Stripes Dress</p>
+            <h6>€{{item.pr}}</h6>
+            <p>{{item.n}}</p>
           </div>
         </div>
       </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="product-item">
-          <div class="pi-pic">
-            <img src="./assets/img/product/5.jpg" alt="">
-            <div class="pi-links">
-              <a href="#" class="add-card"><i class="flaticon-bag"></i><span>ADD TO CART</span></a>
-              <a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
-            </div>
-          </div>
-          <div class="pi-text">
-            <h6>$35,00</h6>
-            <p>Flamboyant Pink Top </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="product-item">
-          <div class="pi-pic">
-            <img src="./assets/img/product/9.jpg" alt="">
-            <div class="pi-links">
-              <a href="#" class="add-card"><i class="flaticon-bag"></i><span>ADD TO CART</span></a>
-              <a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
-            </div>
-          </div>
-          <div class="pi-text">
-            <h6>$35,00</h6>
-            <p>Flamboyant Pink Top </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="product-item">
-          <div class="pi-pic">
-            <img src="./assets/img/product/1.jpg" alt="">
-            <div class="pi-links">
-              <a href="#" class="add-card"><i class="flaticon-bag"></i><span>ADD TO CART</span></a>
-              <a href="#" class="wishlist-btn"><i class="flaticon-heart"></i></a>
-            </div>
-          </div>
-          <div class="pi-text">
-            <h6>$35,00</h6>
-            <p>Flamboyant Pink Top </p>
-          </div>
-        </div>
-      </div>
+
     </div>
+
   </div>
 </section>
 <!-- Related product section end -->
