--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -24,6 +24,7 @@
 <section class="checkout-section spad">
   <div class="container">
     <div class="row">
+
       <div class="col-lg-8 order-2 order-lg-1">
         <form class="checkout-form">
           <div class="cf-title">Billing Address</div>
@@ -57,7 +58,8 @@
               <input type="text" placeholder="Phone no.">
             </div>
           </div>
-          <div class="cf-title">Delievery Info</div>
+
+          <div class="cf-title">Delivery Info</div>
           <div class="row shipping-btns">
             <div class="col-6">
               <h4>Standard</h4>
@@ -65,23 +67,24 @@
             <div class="col-6">
               <div class="cf-radio-btns">
                 <div class="cfr-item">
-                  <input type="radio" name="shipping" id="ship-1">
-                  <label for="ship-1">Free</label>
+                  <input type="radio" name="shipping" id="standard" (change)="handleChange($event)" checked>
+                  <label for="standard">€5.00</label>
                 </div>
               </div>
             </div>
             <div class="col-6">
-              <h4>Next day delievery  </h4>
+              <h4>Express </h4>
             </div>
             <div class="col-6">
               <div class="cf-radio-btns">
                 <div class="cfr-item">
-                  <input type="radio" name="shipping" id="ship-2">
-                  <label for="ship-2">$3.45</label>
+                  <input type="radio" name="shipping" id="express" (change)="handleChange($event)">
+                  <label for="express">€10.00</label>
                 </div>
               </div>
             </div>
           </div>
+
           <div class="cf-title">Payment</div>
           <ul class="payment-list">
             <li>Paypal<a href="#"><img src="./assets/img/paypal.png" alt=""></a></li>
@@ -90,9 +93,11 @@
           <button class="site-btn submit-order-btn">Place Order</button>
         </form>
       </div>
+
       <div class="col-lg-4 order-1 order-lg-2">
         <div class="checkout-cart">
-          <h3>Your Cart</h3>
+          <h4>Your Order</h4>
+          <h6>4 items</h6>
           <ul class="product-list">
             <li>
               <div class="pl-thumb"><img src="/assets/img/cart/1.jpg" alt=""></div>
@@ -104,12 +109,30 @@
               <h6>Animal Print Dress</h6>
               <p>$45.90</p>
             </li>
+            <li>
+              <div class="pl-thumb"><img src="./assets/img/cart/2.jpg" alt=""></div>
+              <h6>Animal Print Dress</h6>
+              <p>$45.90</p>
+            </li>
+            <li>
+              <div class="pl-thumb"><img src="./assets/img/cart/2.jpg" alt=""></div>
+              <h6>Animal Print Dress</h6>
+              <p>$45.90</p>
+            </li>
+            <li>
+              <div class="pl-thumb"><img src="./assets/img/cart/2.jpg" alt=""></div>
+              <h6>Animal Print Dress</h6>
+              <p>$45.90</p>
+            </li>
           </ul>
+
+
           <ul class="price-list">
             <li>Total<span>$99.90</span></li>
-            <li>Shipping<span>free</span></li>
-            <li class="total">Total<span>$99.90</span></li>
+            <li>Shipping<span id="shipping-amount">€5.00</span></li>
+            <li class="total">Total<span >$99.90</span></li>
           </ul>
+
         </div>
       </div>
     </div>
