--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -76,7 +76,7 @@
           <!--<input type="text" placeholder="Enter promo code">-->
           <!--<button>Submit</button>-->
         <!--</form>-->
-        <a routerLink="/checkout" class="site-btn">Proceed to checkout</a>
+        <a routerLink="/checkout" class="site-btn" (click)="proceedToCheckout()">Proceed to checkout</a>
         <a href="" class="site-btn sb-dark">Continue shopping</a>
       </div>
 
